blurr fixed for bootstrap

--- a/style.css
+++ b/style.css
@@ -6,10 +6,7 @@
 
 body {
   font-family: 'Ubuntu', sans-serif;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
+
   height: 100vh;
   overflow: hidden;
   margin: 0;
@@ -21,12 +18,16 @@ body {
   position: absolute;
   top: -30;
   left: -30;
-  width: calc(100vw + 60px);
-  height: calc(100vh + 60px);
+  width: calc(100vw);
+  height: calc(100vh);
   z-index: -1;
   filter: blur(0px);
 }
 .loading-text {
   font-size: 50px;
   color: white;
+}
+.nopadding {
+  padding: 0 !important;
+  margin: 0 !important;
 }
